--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <nav>
   <ul>
 <li class="current"><a href="index.html">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="Services.html">Services</a></li>
+<li><a href="index.about.html">About</a></li>
+<li><a href="index.services.html">Services</a></li>
 </ul>
 </nav>
 </div>
