--- a/index.services.html
+++ b/index.services.html
@@ -17,8 +17,8 @@
   <nav>
   <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li class="current"><a href="Services.html">Services</a></li>
+<li><a href="index.about.html">About</a></li>
+<li class="current"><a href="index.services.html">Services</a></li>
 </ul>
 </nav>
 </div>
